--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body lang="en">
     <section id="main">
       <header id="title">
-        <h1>John Doe</h1>
-        <span class="subtitle">Plaintiff, defendant &amp; witness</span>
+        <h1>Vijay Katta</h1>
+        <span class="subtitle">Java, Node &amp; Cloud</span>
       </header>
       <section class="main-block">
         <h2>
