--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 		</div>
 		<div id="nav">
 			<ul>
-				<li><a href="#/home.html">Home</a></li>
+				<li><a href="#/home.html">About</a></li>
+				<li><a href="#/resume.html">Work/Projects</a></li>
 				<li><a href="#/resume.html">Resume</a></li>
 				<li><a href="#/contact.html">Contact</a></li>
 			</ul>	
