--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
 		</div>
 		<div id="content">
 			<h2>Home</h2>
-			<p>
-				This is my first webpage! I was able to code all the HTML and CSS in order to make it. Watch out world of web design here I come!
-			</p>
-			<p> 
-				I can use my skills here to create websites for my business, my friends and family, my C.V, blog or articles. As well as any games or more experiment stuff (which is what the web is really all about). 
-			</p>
+			<p>As a Lead Software Engineer with over 17 years of experience in IT development and services, I specialize in designing and delivering high-quality, scalable software solutions. My expertise spans across a broad range of technologies, including Java, Spring, Spring Boot/Cloud, React JS, and cloud infrastructure (AWS and private cloud). I am adept at leveraging SDLC best practices, REST and microservices architecture, containerization, and IntelliJ plugins to drive software excellence.
+
+				Throughout my career, I’ve successfully managed medium to large teams across local and global regions, fostering a collaborative environment where innovation and efficiency thrive. I bring strong project management skills, an ability to set and achieve strategic goals, and an adaptive approach to both Agile/Scrum and Waterfall methodologies.
+				
+				In addition to my technical acumen, I am passionate about mentoring and empowering my team members to reach their full potential. I thrive in dynamic environments and am always eager to tackle new challenges, particularly in cybersecurity and data-centric projects.
+				
+				Currently pursuing an MS in Data Science, I am excited to further enhance my skills in data-driven decision-making and advanced analytics. Let's connect and explore opportunities to collaborate!
 		</div>
 		<div id="footer">
 			<p>
