--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		  <li class="dropdown">
 			<a href="#projects">Work/Projects ▼</a>
 			<ul class="dropdown-menu">
-			  <li><a href="https://github.com/kattavijay/datascience-projects" target="_blank">Data Science</a></li>
+			  <li><a href="dsprojects.html">Data Science Projects</a></li>
 			  <li><a href="https://github.com/kattavijay?tab=repositories" target="_blank">Other </a></li>
 			</ul>
 		  </li>
