--- a/dsprojects.html
+++ b/dsprojects.html
@@ -4,7 +4,39 @@
     <meta charset="UTF-8">
     <title>Data Science Projects - Vijay Katta</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"> <!-- Optional: Link your CSS -->
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 2rem;
+            background-color: #f9f9f9;
+        }
+        header {
+            text-align: center;
+            padding-bottom: 1rem;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            background-color: white;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+        th, td {
+            padding: 1rem;
+            border: 1px solid #ddd;
+            text-align: left;
+            vertical-align: top;
+        }
+        th {
+            background-color: #f0f0f0;
+        }
+        a {
+            color: #0073e6;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -12,38 +44,56 @@
         <p>Explore a collection of practical machine learning and data visualization projects.</p>
     </header>
     <main>
-        <ul>
-            <li>
-                <strong><a href="https://github.com/kattavijay/datascience-projects/tree/main/ZillowHousePrediction" target="_blank">Zillow House Prediction</a></strong> - Predicts housing prices using regression models and Zillow dataset.
-            </li>
-            <li>
-                <strong><a href="https://github.com/kattavijay/datascience-projects/tree/main/NetflixViewingTrendsAnalysis" target="_blank">Netflix Viewing Trends Analysis</a></strong> - Visual storytelling using Netflix viewership data and Power BI.
-            </li>
-            <li>
-                <strong><a href="https://github.com/kattavijay/datascience-projects/tree/main/Natural%20Disaster%20Tweet%20Classifier" target="_blank">Natural Disaster Tweet Classifier</a></strong> - NLP model to classify tweets related to disasters.
-            </li>
-            <li>
-                <strong><a href="https://github.com/kattavijay/datascience-projects/tree/main/Medical%20Chatbot%20with%20NLP" target="_blank">Medical Chatbot with NLP</a></strong> - Healthcare assistant bot using natural language understanding.
-            </li>
-            <li>
-                <strong><a href="https://github.com/kattavijay/datascience-projects/tree/main/Food%20Safety%20Violation%20Clustering" target="_blank">Food Safety Violation Clustering</a></strong> - Clustering violations to identify problem hotspots.
-            </li>
-            <li>
-                <strong><a href="https://github.com/kattavijay/datascience-projects/tree/main/ChildcareCostVisualizationDashboard" target="_blank">Childcare Cost Visualization Dashboard</a></strong> - Dashboard displaying childcare cost trends across U.S.
-            </li>
-            <li>
-                <strong><a href="https://github.com/kattavijay/datascience-projects/tree/main/CancerClassification" target="_blank">Cancer Classification</a></strong> - ML model for classifying tumor types based on clinical data.
-            </li>
-            <li>
-                <strong><a href="https://github.com/kattavijay/datascience-projects/tree/main/Biometric%20Authentication%20AI%20Analysis" target="_blank">Biometric Authentication AI Analysis</a></strong> - Analysis and models for biometric-based authentication.
-            </li>
-            <li>
-                <strong><a href="https://github.com/kattavijay/datascience-projects/tree/main/AI%20Prompt%20Engineering%20Examples" target="_blank">AI Prompt Engineering Examples</a></strong> - Prompt engineering patterns and performance metrics using OpenAI APIs.
-            </li>
-            <li>
-                <strong><a href="https://github.com/kattavijay/datascience-projects/tree/main/US%20Baby%20Names%20Time%20Series%20Forecasting" target="_blank">US Baby Names Time Series Forecasting</a></strong> - Time series analysis of baby name trends.
-            </li>
-        </ul>
+        <table>
+            <thead>
+                <tr>
+                    <th>Project Name</th>
+                    <th>Description</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><a href="https://github.com/kattavijay/datascience-projects/tree/main/ZillowHousePrediction" target="_blank">Zillow House Prediction</a></td>
+                    <td>Predicts housing prices using regression models and Zillow dataset.</td>
+                </tr>
+                <tr>
+                    <td><a href="https://github.com/kattavijay/datascience-projects/tree/main/NetflixViewingTrendsAnalysis" target="_blank">Netflix Viewing Trends Analysis</a></td>
+                    <td>Visual storytelling using Netflix viewership data and Power BI.</td>
+                </tr>
+                <tr>
+                    <td><a href="https://github.com/kattavijay/datascience-projects/tree/main/Natural%20Disaster%20Tweet%20Classifier" target="_blank">Natural Disaster Tweet Classifier</a></td>
+                    <td>NLP model to classify tweets related to disasters.</td>
+                </tr>
+                <tr>
+                    <td><a href="https://github.com/kattavijay/datascience-projects/tree/main/Medical%20Chatbot%20with%20NLP" target="_blank">Medical Chatbot with NLP</a></td>
+                    <td>Healthcare assistant bot using natural language understanding.</td>
+                </tr>
+                <tr>
+                    <td><a href="https://github.com/kattavijay/datascience-projects/tree/main/Food%20Safety%20Violation%20Clustering" target="_blank">Food Safety Violation Clustering</a></td>
+                    <td>Clustering violations to identify problem hotspots.</td>
+                </tr>
+                <tr>
+                    <td><a href="https://github.com/kattavijay/datascience-projects/tree/main/ChildcareCostVisualizationDashboard" target="_blank">Childcare Cost Visualization Dashboard</a></td>
+                    <td>Dashboard displaying childcare cost trends across U.S.</td>
+                </tr>
+                <tr>
+                    <td><a href="https://github.com/kattavijay/datascience-projects/tree/main/CancerClassification" target="_blank">Cancer Classification</a></td>
+                    <td>ML model for classifying tumor types based on clinical data.</td>
+                </tr>
+                <tr>
+                    <td><a href="https://github.com/kattavijay/datascience-projects/tree/main/Biometric%20Authentication%20AI%20Analysis" target="_blank">Biometric Authentication AI Analysis</a></td>
+                    <td>Analysis and models for biometric-based authentication.</td>
+                </tr>
+                <tr>
+                    <td><a href="https://github.com/kattavijay/datascience-projects/tree/main/AI%20Prompt%20Engineering%20Examples" target="_blank">AI Prompt Engineering Examples</a></td>
+                    <td>Prompt engineering patterns and performance metrics using OpenAI APIs.</td>
+                </tr>
+                <tr>
+                    <td><a href="https://github.com/kattavijay/datascience-projects/tree/main/US%20Baby%20Names%20Time%20Series%20Forecasting" target="_blank">US Baby Names Time Series Forecasting</a></td>
+                    <td>Time series analysis of baby name trends.</td>
+                </tr>
+            </tbody>
+        </table>
     </main>
 </body>
 </html>
